<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/umadeb_2018"
            android:title="@string/umadeb_ano"
            android:icon="@mipmap/ic_umadeb_icon_preto" />
        <item
            android:id="@+id/integrantes"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/title_activity_integrantes" />
        <item
            android:id="@+id/agenda_geral"
            android:title="@string/agenda_geral"
            android:icon="@drawable/ic_date_range_black_24dp" />

        <item
            android:id="@+id/btn_album"
            android:title="@string/album"
            android:icon="@drawable/ic_date_range_black_24dp" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
